// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/SqlOptimization/Overview render overview page 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-1nxvf9m"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center project-name-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center database-type-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                          fill="#15C7D4"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            优化概要
          </h5>
          <div
            class="ant-row css-dev-only-do-not-override-txh9fw"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0725431411 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0423139512 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_orderdate,o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when index_recommendations is empty list 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-1nxvf9m"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center project-name-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center database-type-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                          fill="#15C7D4"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            优化概要
          </h5>
          <div
            class="ant-row css-dev-only-do-not-override-txh9fw"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                  >
                    暂无需要优化的索引
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="anticon"
                    role="img"
                  >
                    <svg
                      height="18"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M398.494886 365.118251C537.464307 288.294974 427.87184 92.24251 555.08141 84.194704 742.605244 92.841234 655.197922 384 655.197922 384L772.65207 384C855.435454 384 905.576924 448.722763 885.198573 528.562338L817.961841 791.986598C806.271712 837.786918 758.737126 874.666667 711.712053 874.666667L448.133741 874.666667C433.864986 874.666667 420.242927 871.867204 407.791343 866.787953 384.000002 853.81293 384 830.740885 384 830.740885L384 401.323665C384 401.323665 384.758274 376.156277 398.494886 365.118251ZM304.189762 874.666667 227.009286 874.666667C191.72855 874.666667 160.809916 846.165515 157.951887 811.023593L128.398809 447.643074C125.540197 412.493975 151.875017 384 187.012764 384L304.829301 384C343.692282 387.294701 341.333333 421.731772 341.333333 421.731772L341.333333 842.852864C341.333333 842.852864 343.401099 870.898027 304.189762 874.666667Z"
                        fill="#FF7043"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when status is failed 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-1nxvf9m"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center project-name-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center database-type-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                          fill="#15C7D4"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
            <section
              class="status-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center database-type-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M6.875 1.51554C7.57115 1.11362 8.42885 1.11362 9.125 1.51554L13.0532 3.78349C13.7494 4.18542 14.1782 4.9282 14.1782 5.73205V10.2679C14.1782 11.0718 13.7494 11.8146 13.0532 12.2165L9.125 14.4845C8.42885 14.8864 7.57115 14.8864 6.875 14.4845L2.9468 12.2165C2.25064 11.8146 1.8218 11.0718 1.8218 10.2679V5.73205C1.8218 4.9282 2.25064 4.18542 2.9468 3.78349L6.875 1.51554Z"
                          stroke="#F59957"
                          stroke-width="1.5"
                        />
                        <path
                          d="M8 10L8 12"
                          stroke="#F59957"
                          stroke-width="1.5"
                        />
                        <path
                          d="M8 4L8.00415 8.5"
                          stroke="#F59957"
                          stroke-width="1.5"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      调优失败
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            优化概要
          </h5>
          <div
            class="ant-row css-dev-only-do-not-override-txh9fw"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          5
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          3
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        110824.55%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0725431411 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
              <div
                class="actiontech-sql-snippet-renderer-wrapper css-dz7fl9"
              >
                <div
                  class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line margin-bottom-0 css-dev-only-do-not-override-txh9fw"
                >
                  <span>
                    <span
                      class="hljs-keyword"
                    >
                      CREATE
                    </span>
                     INDEX PAWSQL_IDX0423139512 
                    <span
                      class="hljs-keyword"
                    >
                      ON
                    </span>
                     optimization.orders(o_orderdate,o_custkey);
                  </span>
                </div>
                <div
                  class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
                >
                  <span
                    aria-label="copy"
                    class="anticon anticon-copy"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="copy"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/SqlOptimization/Overview render overview page when status is optimizing 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <div
          class="actiontech-page-header-namespace fixed-style css-1xspr0w"
        >
          <div
            class="title"
          >
            <a
              href="/sqle/project/700300/sql-optimization"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回智能调优列表
                </span>
              </button>
            </a>
          </div>
          <div
            class="extra"
          />
        </div>
        <section
          class="css-1nxvf9m"
        >
          <section
            class="header-wrapper"
          >
            <section
              class="header"
            >
              <h3
                class="header-cont-text"
              >
                optmz_20240417112938238
              </h3>
            </section>
            <section
              class="tag-wrapper"
            >
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center project-name-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15.75 7.125V9.375C15.75 11.2387 12.7275 12.75 9 12.75C5.2725 12.75 2.25 11.2387 2.25 9.375V7.125C2.25 8.98875 5.2725 10.5 9 10.5C12.7275 10.5 15.75 8.98875 15.75 7.125ZM2.25 10.875C2.25 12.7387 5.2725 14.25 9 14.25C12.7275 14.25 15.75 12.7387 15.75 10.875V13.125C15.75 14.9887 12.7275 16.5 9 16.5C5.2725 16.5 2.25 14.9887 2.25 13.125V10.875ZM9 9C5.2725 9 2.25 7.48875 2.25 5.625C2.25 3.76125 5.2725 2.25 9 2.25C12.7275 2.25 15.75 3.76125 15.75 5.625C15.75 7.48875 12.7275 9 9 9Z"
                          fill="#4583FF"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据源
                      ：
                      dd1
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="custom-tag-item"
              >
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center database-type-space css-5f96fe"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 6px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                      role="img"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8.25 5.25V3C8.25 2.80109 8.32902 2.61032 8.46967 2.46967C8.61032 2.32902 8.80109 2.25 9 2.25H15.75C15.9489 2.25 16.1397 2.32902 16.2803 2.46967C16.421 2.61032 16.5 2.80109 16.5 3V15C16.5 15.1989 16.421 15.3897 16.2803 15.5303C16.1397 15.671 15.9489 15.75 15.75 15.75H2.25C2.05109 15.75 1.86032 15.671 1.71967 15.5303C1.57902 15.3897 1.5 15.1989 1.5 15V6C1.5 5.80109 1.57902 5.61032 1.71967 5.46967C1.86032 5.32902 2.05109 5.25 2.25 5.25H8.25ZM3.75 12V13.5H7.5V12H3.75ZM10.5 12V13.5H14.25V12H10.5ZM10.5 9.75V11.25H14.25V9.75H10.5ZM10.5 7.5V9H14.25V7.5H10.5ZM3.75 9.75V11.25H7.5V9.75H3.75Z"
                          fill="#15C7D4"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div>
                      数据库类型
                      ：
                      MySQL
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
        </section>
        <section
          class="css-abvdc0"
        >
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            优化概要
          </h5>
          <div
            class="ant-row css-dev-only-do-not-override-txh9fw"
            style="margin-left: -8px; margin-right: -8px;"
          >
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已解析的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      已优化的SQL
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化推荐的索引
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        <span
                          class="ant-statistic-content-value-int"
                        >
                          0
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-col ant-col-6 css-dev-only-do-not-override-txh9fw"
              style="padding-left: 8px; padding-right: 8px;"
            >
              <div
                class="ant-card ant-card-bordered css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-card-body"
                >
                  <div
                    class="ant-statistic css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-statistic-title"
                    >
                      优化后的性能提升
                    </div>
                    <div
                      class="ant-statistic-content"
                    >
                      <span
                        class="ant-statistic-content-value"
                      >
                        0%
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <h5
            class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
          >
            SQL语句列表
          </h5>
          <div
            class="ant-table-wrapper actiontech-table-namespace table-row-cursor optimization-sql-table css-fxd6ka css-dev-only-do-not-override-bj9uhl"
          >
            <div
              class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
            >
              <div
                class="ant-spin-container"
              >
                <div
                  class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                >
                  <div
                    class="ant-table-container"
                  >
                    <div
                      class="ant-table-content"
                      style="overflow-x: auto; overflow-y: hidden;"
                    >
                      <table
                        style="min-width: 100%; table-layout: auto;"
                      >
                        <colgroup>
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col />
                          <col
                            style="width: 82px;"
                          />
                        </colgroup>
                        <thead
                          class="ant-table-thead"
                        >
                          <tr>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              序号
                            </th>
                            <th
                              class="ant-table-cell ellipsis-column-width"
                              scope="col"
                            >
                              SQL文本
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              语法错误
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              推荐索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              命中索引
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              重写优化
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              性能提升
                            </th>
                            <th
                              class="ant-table-cell"
                              scope="col"
                            >
                              使用的索引
                            </th>
                            <th
                              class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                              scope="col"
                              style="position: sticky; right: 0px;"
                            >
                              操作
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ant-table-tbody"
                        >
                          <tr
                            aria-hidden="true"
                            class="ant-table-measure-row"
                            style="height: 0px; font-size: 0px;"
                          >
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                            <td
                              style="padding: 0px; border: 0px; height: 0px;"
                            >
                              <div
                                style="height: 0px; overflow: hidden;"
                              >
                                 
                              </div>
                            </td>
                          </tr>
                          <tr
                            class="ant-table-placeholder"
                          >
                            <td
                              class="ant-table-cell"
                              colspan="9"
                            >
                              <div
                                class="ant-table-expanded-row-fixed"
                                style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                              />
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <section
            class="last-title"
          >
            <h5
              class="ant-typography title-wrap css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  推荐索引
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle tooltips-default-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </h5>
            <section
              class="css-1m486f3"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <span
                    class="ant-typography css-dev-only-do-not-override-txh9fw"
                  >
                    暂无需要优化的索引
                  </span>
                </div>
                <div
                  class="ant-space-item"
                >
                  <span
                    class="anticon"
                    role="img"
                  >
                    <svg
                      height="18"
                      version="1.1"
                      viewBox="0 0 1024 1024"
                      width="18"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M398.494886 365.118251C537.464307 288.294974 427.87184 92.24251 555.08141 84.194704 742.605244 92.841234 655.197922 384 655.197922 384L772.65207 384C855.435454 384 905.576924 448.722763 885.198573 528.562338L817.961841 791.986598C806.271712 837.786918 758.737126 874.666667 711.712053 874.666667L448.133741 874.666667C433.864986 874.666667 420.242927 871.867204 407.791343 866.787953 384.000002 853.81293 384 830.740885 384 830.740885L384 401.323665C384 401.323665 384.758274 376.156277 398.494886 365.118251ZM304.189762 874.666667 227.009286 874.666667C191.72855 874.666667 160.809916 846.165515 157.951887 811.023593L128.398809 447.643074C125.540197 412.493975 151.875017 384 187.012764 384L304.829301 384C343.692282 387.294701 341.333333 421.731772 341.333333 421.731772L341.333333 842.852864C341.333333 842.852864 343.401099 870.898027 304.189762 874.666667Z"
                        fill="#FF7043"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </section>
          </section>
        </section>
      </div>
    </div>
  </div>
</body>
`;
